test/positive/Global03.cfr
// behavioral clafer test for default globally or G

a
 b ?
  c ?
 [eventually globally c]

// Rao: This parses without any problems.
