test/negative/before02.cfr
// Test for negative before constraint

a
 b ?
  c ?
  d ?
  [c before ]

// Rao: works fine as failed to parse. 
